[tool.poetry]
name = "pyqt-gui-mf"
version = "0.1.0"
description = "GUI Applications with Python and QT6"
authors = ["Arun Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
pyqt6 = "^6.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
ipython = "^8.16.1"
python-lsp-server = {extras = ["all"], version = "^1.8.2"}
pylsp-rope = "^0.1.11"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
