[project]
name = "pyqt-gui-MF"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arunkhattri", email = "arunkhattri@outlook.com"},
]
dependencies = [
    "pyqt6>=6.6.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "python-lsp-server>=1.10.0",
    "python-lsp-ruff>=2.2.0",
    "pylint>=3.1.0",
    "pytest>=8.1.1",
    "ipython>=8.22.2",
    "python-decouple>=3.8",
]
